--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
     .btn-secondary { width: 100%; }
   }
 </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LV49Y2R4Z4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-LV49Y2R4Z4');
+</script>
+
 </head>
 <body>
   <div class="container">
